objects/Account_Trend_Snapshot__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Trend Snapshots</relationshipLabel>
        <relationshipName>Account_Trend_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>Solution_Category__c</referenceTo>
        <relationshipLabel>Account Trend Snapshots</relationshipLabel>
        <relationshipName>Account_Trend_Snapshots</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SML_Data__c</fullName>
        <label>SML Data</label>
        <referenceTo>SML_Data__c</referenceTo>
        <relationshipLabel>Account Trend Snapshots</relationshipLabel>
        <relationshipName>Account_Trend_Snapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Account Trend Snapshot</label>
    <listViews>
        <fullName>Issues</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SML_Data__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account__c</field>
            <operation>contains</operation>
            <value>Under Armour</value>
        </filters>
        <filters>
            <field>Snapshot_Date__c</field>
            <operation>equals</operation>
            <value>6/3/2016</value>
        </filters>
        <label>Issues</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>SML_Data__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Snapshot_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SML_Data__c</field>
            <operation>equals</operation>
        </filters>
        <label>Test</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Trend Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Trend Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>